# nixos

./: .gitignore  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  configuration.nix  dconf.nix  devenv.nix  diff-filter.py  diff_w.txt  flake.nix  gc.sh  niri switch plan.md  nixos_configuration_analysis.md  outputs.nix  package.json  plan-home-manager-dotfiles-strategy.md  plan.md  pnpm-lock.yaml  result  setup.sh  shell.nix  test.nix  treefmt.nix  usefull commands.md  validate.sh  validation_summary.txt
.githooks/: pre-commit
.github/: copilot-instructions.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  dotfile_migration_plan.md
dev-templates/: README.md  README_FOR_AI.md  flake.nix
dev-templates/python/: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  flake.nix  justfile  pyproject.toml
dev-templates/python/src/sample_project/: __init__.py
docs/: README.md  TODOs.md  auto-commit-flake-lock.md  dev-templates.md  secrets-workflows.md
dotfiles/: README_FOR_AI.md  README_FOR_AI_NIRI.md  basic niri.md
flake/: README.md  lib.nix  monitoring-inventory.nix  secrets-policy.nix
home-manager/: home.nix
modules/: README.md
nixos/: autoupgrade.nix  bootloader.nix  configurations.nix  docker.nix  firewall.nix  flatpak.nix  gnome.nix  hardware-configuration.nix  hardware-configuration_x230.nix  homeassistant.nix  locale.nix  networking.nix  octoprint.nix  other-hardware.nix  packages.nix  plasma.nix  podman.nix  (+10 more)
uv-tools/: README.md  pyproject.toml
(+382 files in other folders)
